Work on R Script editing. Have to figure out how to limit the viewport without using mat-dialog-content, since it has a fixed value of 65vh, what is too low for this purpose. Also the dialog is not really aligned with the screen. Causing trouble when activating a header. Buttons still need functionality to close and discard/save.

--- a/src/app/util/components/code-editor-overlay/code-editor-overlay.style.css
+++ b/src/app/util/components/code-editor-overlay/code-editor-overlay.style.css
@@ -1,7 +1,6 @@
 :host {
     display: block;
 }
-div {
-    height: 100%;
-    width: 100%;
+:host ::ng-deep .CodeMirror {
+    border: 1px solid #eee;
 }
