--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,6 @@ a {
         opacity: 0.85 !important;
     }
 }
+.code-editor-dialog .mat-dialog-container {
+    padding: 0;
+}
